# stt-tui

./: Cargo.toml  README.adoc  README.md
src/: api.rs  app.rs  audio.rs  config.rs  event.rs  local.rs  main.rs  storage.rs  ui.rs
