[package]
name = "stt-tui"
version = "0.3.0"
edition = "2021"

[dependencies]
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = "0.28"
cpal = "0.15"
hound = "3.5"
reqwest = { version = "0.12", features = ["multipart", "stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
toml = "0.8"
chrono = "0.4"
futures = "0.3"
rusqlite = { version = "0.34", features = ["bundled"] }
tar = "0.4"
flate2 = "1.0"

[target.'cfg(target_os = "macos")'.dependencies]
transcribe-rs = { version = "0.3", features = ["whisper-metal", "onnx"] }

[target.'cfg(target_os = "linux")'.dependencies]
transcribe-rs = { version = "0.3", features = ["whisper-cpp", "onnx"] }
